# MallaRegular

./: CMakeLists.txt  Casilla.h  MallaRegular.h  ReanelCar.cpp  ReanelCar.h  ThashUsuario.cpp  ThashUsuario.h  UTM.h  analisis_Thash.md  coches_v2.csv  destino.csv  img.cpp  img.h  main.cpp  mapaResultado.ppm  puntos_recarga.csv  usuarios1.csv
